--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
-    "vite": "^7.2.4"
+    "vite": "^7.2.4",
+    "tailwindcss": "^3.5.0",
+    "postcss": "^8.5.0",
+    "autoprefixer": "^10.4.0"
   }
 }
